Impl DeviceType Controller
